--- a/sass/abstracts/variables/_structure.scss
+++ b/sass/abstracts/variables/_structure.scss
@@ -10,3 +10,5 @@ $breakpoint__sp : 480px;
 $breakpoint__tab : 780px;
 $breakpoint__note : 1040px;
 $breakpoint__pc : 1280px;
+
+$wp__breakpoint-max599: 599px;
