--- a/sass/base/elements/_body.scss
+++ b/sass/base/elements/_body.scss
@@ -2,7 +2,7 @@
   font-size: $font__main-size-sp;
 }
 
-@include at-query($breakpoint__tab){
+@include at-query-min($breakpoint__tab){
   :root {
     font-size: $font__main-size-pc;
   }
