--- a/style.css
+++ b/style.css
@@ -46,7 +46,8 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 	- Jetpack infinite scroll
 # Utilities
 	- Accessibility
-	- Alignments
+  - Alignments
+  - WP Blocks
 
 --------------------------------------------------------------*/
 /*--------------------------------------------------------------
@@ -981,7 +982,7 @@ textarea {
 }
 
 .front-catch-section h2 {
-	margin-bottom: .5em;
+	margin: .5em auto;
 }
 
 .front-catch-section h2::after {
@@ -1395,6 +1396,14 @@ textarea {
 	margin-left: auto;
 	margin-right: auto;
 	margin-bottom: 1.5em;
+}
+
+/* WordPress Blocks
+--------------------------------------------- */
+@media screen and (max-width: 599px) {
+	.columns-sp-r {
+		flex-direction: column-reverse;
+	}
 }
 
 /*# sourceMappingURL=style.css.map */
