--- a/sass/components/content/_page-front.scss
+++ b/sass/components/content/_page-front.scss
@@ -81,10 +81,6 @@
     padding: 1rem 1.5rem 1.3rem;
     border-radius: 1rem;
 
-    &:nth-of-type(1) {
-      margin-top: 0;
-    }
-
     &:nth-of-type(1),
     &:nth-of-type(2) {
       border: 3px solid $color__site-sub-blue;
@@ -113,6 +109,7 @@
     }
   }
   p {
+    margin-bottom: 0;
     span {
       font-size: .9rem;
     }
@@ -120,14 +117,6 @@
   .front-planprice-option {
     margin-bottom: 0;
     font-size: .9rem;
-  }
-}
-
-@include at-query-min($breakpoint__tab) {
-  .front-planprice-columns {
-    .wp-block-column {
-      margin-top: 0;
-    }
   }
 }
 
@@ -191,6 +180,9 @@
       margin: 0 .5rem 3rem;
       flex-basis: 100%;
       text-align: center;
+      &:last-child {
+        margin-bottom: 0;
+      }
     }
   }
 }
@@ -201,6 +193,9 @@
       .wp-block-image {
         margin: 0 2rem 1.5rem;
         flex-basis: auto;
+        &:last-child {
+          margin-bottom: 1.5rem;
+        }
       }
     }
   }
