--- a/style.css
+++ b/style.css
@@ -858,6 +858,7 @@ textarea {
 /* Site Footer
 --------------------------------------------- */
 .site-footer {
+	margin-top: 6rem;
 	padding: 1rem 0;
 	background-color: #00B4C7;
 }
@@ -910,7 +911,7 @@ textarea {
 .sub-title {
 	text-align: center;
 	font-size: 1.25rem;
-	margin-bottom: 2.5em;
+	margin-bottom: 2.4em;
 }
 
 .small-text {
@@ -1028,10 +1029,6 @@ textarea {
 	border-radius: 1rem;
 }
 
-.front-planprice-columns .wp-block-column:nth-of-type(1) {
-	margin-top: 0;
-}
-
 .front-planprice-columns .wp-block-column:nth-of-type(1), .front-planprice-columns .wp-block-column:nth-of-type(2) {
 	border: 3px solid #66cffe;
 }
@@ -1063,6 +1060,10 @@ textarea {
 	font-size: .6em;
 }
 
+.front-planprice-columns p {
+	margin-bottom: 0;
+}
+
 .front-planprice-columns p span {
 	font-size: .9rem;
 }
@@ -1070,12 +1071,6 @@ textarea {
 .front-planprice-columns .front-planprice-option {
 	margin-bottom: 0;
 	font-size: .9rem;
-}
-
-@media screen and (min-width: 780px) {
-	.front-planprice-columns .wp-block-column {
-		margin-top: 0;
-	}
 }
 
 .front-service-icons {
@@ -1154,10 +1149,17 @@ textarea {
 	text-align: center;
 }
 
+.front-sponser-container .wp-block-group__inner-container .wp-block-image:last-child {
+	margin-bottom: 0;
+}
+
 @media screen and (min-width: 480px) {
 	.front-sponser-container .wp-block-group__inner-container .wp-block-image {
 		margin: 0 2rem 1.5rem;
 		flex-basis: auto;
+	}
+	.front-sponser-container .wp-block-group__inner-container .wp-block-image:last-child {
+		margin-bottom: 1.5rem;
 	}
 }
 
