--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -35,8 +35,8 @@
 }
 
 .line-button {
-  margin-top: 1.5em;
-  margin-bottom: 1.2em;
+  margin-top: .8rem;
+  margin-bottom: .6rem;
 
   &.wp-block-button {
 
