--- a/style.css
+++ b/style.css
@@ -919,8 +919,8 @@ textarea {
 }
 
 .line-button {
-	margin-top: 1.5em;
-	margin-bottom: 1.2em;
+	margin-top: .8rem;
+	margin-bottom: .6rem;
 }
 
 .line-button.wp-block-button .wp-block-button__link {
@@ -1024,7 +1024,7 @@ textarea {
 }
 
 .front-planprice-columns .wp-block-column {
-	margin-top: 1rem;
+	margin-bottom: 1rem;
 	padding: 1rem 1.5rem 1.3rem;
 	border-radius: 1rem;
 }
@@ -1074,8 +1074,7 @@ textarea {
 }
 
 .front-service-icons {
-	margin-right: auto;
-	margin-left: auto;
+	margin: 0 auto 1.8rem;
 	max-width: 960px;
 }
 
