--- a/style.css
+++ b/style.css
@@ -407,7 +407,7 @@ h6 {
 
 h2 {
 	position: relative;
-	margin: 2em auto .4em;
+	margin: 2em auto 1.5em;
 	text-align: center;
 	font-size: 2.5rem;
 }
@@ -908,7 +908,11 @@ textarea {
 	margin: 0 0 1.5em;
 }
 
-.sub-title {
+.pair-h2 h2 {
+	margin: 2em auto .4em;
+}
+
+.pair-h2 p {
 	text-align: center;
 	font-size: 1.25rem;
 	margin-bottom: 2.4em;
