--- a/style.css
+++ b/style.css
@@ -5,13 +5,13 @@ Theme URI: https://ichif.net/
 Author: Daichi Hirota
 Author URI: https://ichif.net/
 Description: Description
-Version: 1.0.0
+Version: 1.0.1
 Tested up to: 5.5
 Requires PHP: 7.0
 License: GNU General Public License v2 or later
 License URI: LICENSE
 Text Domain: sab
-Tags: custom-background, custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
+Tags: custom-logo, custom-menu, featured-images, threaded-comments, translation-ready
 
 This theme, like WordPress, is licensed under the GPL.
 Use it to make something cool, have fun, and share what you've learned.
