--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -53,7 +53,7 @@
       &::after {
         transform: scaleX(0);
         transform-origin: left center;
-        transition: transform .6s .4s;
+        transition: transform .3s .6s;
       }
     }
     p {
@@ -116,7 +116,7 @@
 
   &.effective {
     transform: scale(0);
-    transition: transform 1s;
+    transition: transform .3s;
     &.is-active {
       transform: scaleY(1);
     }
