--- a/style.css
+++ b/style.css
@@ -945,7 +945,7 @@ textarea {
 
 .pair-h2.effective p {
 	transform: scaleX(0);
-	transition: transform .3s .3s;
+	transition: transform .3s;
 }
 
 .pair-h2.effective.is-active h2 {
@@ -1050,11 +1050,27 @@ textarea {
 }
 
 .front-catch-section h2 {
-	margin: .5em auto;
+	position: relative;
+	margin: .5em auto 1em;
 }
 
 .front-catch-section h2::after {
-	content: none;
+	content: '';
+	display: block;
+	position: absolute;
+	z-index: -2;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	width: 20rem;
+	max-width: none;
+	height: 14rem;
+	background-image: url(./images/drow-paint.png);
+	background-size: contain;
+	background-repeat: no-repeat;
+	background-color: transparent;
+	background-position: center;
 }
 
 .front-catch-section p {
@@ -1067,25 +1083,36 @@ textarea {
 	transition: transform .3s;
 }
 
+.front-catch-section.effective h2::before {
+	content: '';
+	display: block;
+	position: absolute;
+	z-index: -1;
+	top: 0;
+	bottom: 0;
+	right: 0;
+	left: 0;
+	margin: auto;
+	width: 20.1rem;
+	height: 14.1rem;
+	background-color: #fff;
+	transform: scaleX(1);
+	transform-origin: bottom right;
+	transition: transform 1.2s .3s;
+}
+
 .front-catch-section.effective p {
 	opacity: 0;
 	transform: translateY(15px);
-}
-
-.front-catch-section.effective p:nth-of-type(1) {
-	transition: opacity .3s .3s, transform .3s .3s;
-}
-
-.front-catch-section.effective p:nth-of-type(2) {
-	transition: opacity .3s .6s, transform .3s .6s;
-}
-
-.front-catch-section.effective p:nth-of-type(3) {
 	transition: opacity .3s .9s, transform .3s .9s;
 }
 
 .front-catch-section.effective.is-active .wp-block-column:first-child {
 	transform: scale(1);
+}
+
+.front-catch-section.effective.is-active h2::before {
+	transform: scaleX(0);
 }
 
 .front-catch-section.effective.is-active p {
@@ -1094,8 +1121,19 @@ textarea {
 }
 
 @media screen and (min-width: 780px) {
+	.front-catch-section h2 {
+		margin: .5em auto;
+	}
 	.front-catch-section p {
 		text-align: center;
+	}
+	.front-catch-section.effective h2::before {
+		width: 23.1rem;
+		height: 16.1rem;
+	}
+	.front-catch-section.effective h2::after {
+		width: 23rem;
+		height: 16rem;
 	}
 }
 
