--- a/style.css
+++ b/style.css
@@ -994,14 +994,14 @@ textarea {
 	background-color: #00B900;
 }
 
-.line-button.wp-block-button .wp-block-button__link:hover {
+.line-button.wp-block-button .wp-block-button__link:hover, .line-button.wp-block-button .wp-block-button__link:active {
 	color: #404040;
 	background-color: transparent;
 }
 
 .line-button.effective {
 	transform: scale(0);
-	transition: transform .3s;
+	transition: transform .6s;
 }
 
 .line-button.effective.is-active {
@@ -1153,13 +1153,13 @@ textarea {
 
 .front-goodpoint-columns.effective h3::after {
 	transform: scale(0);
-	transition: transform .6s .6s;
+	transition: transform .6s .9s;
 }
 
 .front-goodpoint-columns.effective p {
 	opacity: 0;
 	transform: translateY(15px);
-	transition: opacity .3s .3s, transform .3s .3s;
+	transition: opacity .3s .6s, transform .3s .6s;
 }
 
 .front-goodpoint-columns.effective figure {
@@ -1195,10 +1195,10 @@ textarea {
 		transition: transform .6s .6s;
 	}
 	.front-goodpoint-columns.effective p {
-		transition: opacity .3s, transform .3s;
+		transition: opacity .3s .3s, transform .3s .3s;
 	}
 	.front-goodpoint-columns.effective figure {
-		transition: opacity .3s .3s, transform .3s .3s;
+		transition: opacity .3s .9s, transform .3s .9s;
 	}
 }
 
@@ -1454,13 +1454,13 @@ textarea {
 
 .front-access-columns.effective h3::after {
 	transform: scale(0);
-	transition: transform .6s .3s;
+	transition: transform .6s .6s;
 }
 
 .front-access-columns.effective p {
 	opacity: 0;
 	transform: translateY(15px);
-	transition: opacity .3s, transform .3s;
+	transition: opacity .3s .3s, transform .3s .3s;
 }
 
 .front-access-columns.effective.is-active h3 {
