フォーマット

--- a/sass/style.scss
+++ b/sass/style.scss
@@ -52,7 +52,7 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 --------------------------------------------------------------*/
 
 // Import variables and mixins.
-@import "abstracts/abstracts";
+@import 'abstracts/abstracts';
 
 /*--------------------------------------------------------------
 # Generic
@@ -60,16 +60,16 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
 /* Normalize
 --------------------------------------------- */
-@import "generic/normalize";
+@import 'generic/normalize';
 
 /* Box sizing
 --------------------------------------------- */
-@import "generic/box-sizing";
+@import 'generic/box-sizing';
 
 /*--------------------------------------------------------------
 # Base
 --------------------------------------------------------------*/
-@import "base/base";
+@import 'base/base';
 
 /*--------------------------------------------------------------
 # Layouts
@@ -80,19 +80,15 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 /*--------------------------------------------------------------
 # Components
 --------------------------------------------------------------*/
-@import "components/components";
+@import 'components/components';
 
 /*--------------------------------------------------------------
 # Plugins
 --------------------------------------------------------------*/
 
-/* Jetpack infinite scroll
---------------------------------------------- */
-@import "plugins/jetpack/infinite-scroll";
-
 /* Meta Slider
 --------------------------------------------- */
-@import "plugins/metaslider/meta-slider";
+@import 'plugins/metaslider/meta-slider';
 
 /*--------------------------------------------------------------
 # Utilities
@@ -100,12 +96,12 @@ Nicolas Gallagher and Jonathan Neal https://necolas.github.io/normalize.css/
 
 /* Accessibility
 --------------------------------------------- */
-@import "utilities/accessibility";
+@import 'utilities/accessibility';
 
 /* Alignments
 --------------------------------------------- */
-@import "utilities/alignments";
+@import 'utilities/alignments';
 
 /* WordPress Blocks
 --------------------------------------------- */
-@import "utilities/wp-blocks";
+@import 'utilities/wp-blocks';
