リファクタリングと固定ページのコード編集、途中まで

--- a/sass/base/typography/_typography.scss
+++ b/sass/base/typography/_typography.scss
@@ -7,7 +7,7 @@ textarea {
 	color: $color__text-main;
 	font-family: $font__main;
 	font-size: 1rem;
-	line-height: $font__line-height-body;
+	line-height: $font__line-height-normal;
 }
 
 @import "headings";
