--- a/sass/abstracts/variables/_typography.scss
+++ b/sass/abstracts/variables/_typography.scss
@@ -3,7 +3,7 @@ $font__main: "Helvetica Neue", "Hiragino Kaku Gothic ProN", "ヒラギノ角ゴ 
 // stylelint-enable value-keyword-case
 $font__code: monaco, consolas, "Andale Mono", "DejaVu Sans Mono", monospace;
 $font__pre: "Courier 10 Pitch", courier, monospace;
-$font__line-height-body: 2;
+$font__line-height-normal: 2;
 $font__line-height-heading: 1.5;
 $font__line-height-pre: 1.6;
 
