--- a/sass/components/content/_posts-and-pages.scss
+++ b/sass/components/content/_posts-and-pages.scss
@@ -14,9 +14,52 @@
 .page-content,
 .entry-content,
 .entry-summary {
+  margin: 3rem auto 0;
   max-width: $size__site-max;
-  margin: 1.5em auto 0;
-  padding: 0 1.4rem;
+  width: calc(100% - 3rem);
+}
+
+.entry-header {
+  position: relative;
+}
+.post-thumbnail {
+  height: 50vh;
+  img {
+    display: block;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+  }
+}
+
+.entry-title {
+  position: absolute;
+  left: 5%;
+  right: 5%;
+  top: 50%;
+  text-align: center;
+  transform: translateY(-50%);
+  
+  &__heading {
+    display: inline-block;
+    max-width: $size__content-max;
+    margin: 0;
+    padding: .2em;
+    font-size: 3rem;
+    background-color: rgba($color: #fff, $alpha: .7);
+    border-radius: 1rem;
+  }
+}
+
+@include at-query-min($breakpoint__tab){
+  .entry-title {
+    left: 10%;
+    right: 10%;
+
+    &__heading {
+      padding: .5em 1.2em;
+    }
+  }
 }
 
 .page-links {
