--- a/sass/components/navigation/_navigation.scss
+++ b/sass/components/navigation/_navigation.scss
@@ -22,7 +22,7 @@
 
 	a {
     display: block;
-    line-height: $font__line-height-body;
+    line-height: $font__line-height-normal;
 		text-decoration: none;
     color: $color__background-body;
   }
