--- a/style.css
+++ b/style.css
@@ -539,7 +539,6 @@ big {
 }
 
 body {
-	font-size: 1rem;
 	background: #fff;
 }
 
@@ -585,6 +584,7 @@ object {
 }
 
 img {
+	display: inline-block;
 	vertical-align: top;
 	height: auto;
 	max-width: 100%;
@@ -898,9 +898,53 @@ textarea {
 .page-content,
 .entry-content,
 .entry-summary {
+	margin: 3rem auto 0;
 	max-width: 1200px;
-	margin: 1.5em auto 0;
-	padding: 0 1.4rem;
+	width: calc(100% - 3rem);
+}
+
+.entry-header {
+	position: relative;
+}
+
+.post-thumbnail {
+	height: 50vh;
+}
+
+.post-thumbnail img {
+	display: block;
+	width: 100%;
+	height: 100%;
+	object-fit: cover;
+}
+
+.entry-title {
+	position: absolute;
+	left: 5%;
+	right: 5%;
+	top: 50%;
+	text-align: center;
+	transform: translateY(-50%);
+}
+
+.entry-title__heading {
+	display: inline-block;
+	max-width: 960px;
+	margin: 0;
+	padding: .2em;
+	font-size: 3rem;
+	background-color: rgba(255, 255, 255, 0.7);
+	border-radius: 1rem;
+}
+
+@media screen and (min-width: 780px) {
+	.entry-title {
+		left: 10%;
+		right: 10%;
+	}
+	.entry-title__heading {
+		padding: .5em 1.2em;
+	}
 }
 
 .page-links {
@@ -1010,10 +1054,6 @@ textarea {
 
 /* Front Page
 --------------------------------------------- */
-.home .site-main {
-	width: 100%;
-}
-
 .front-top {
 	position: relative;
 	width: 100%;
